--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,4 +60,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-analytics:17.4.1'
 }
+apply plugin: 'com.google.gms.google-services'
