--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   google_fonts: ^1.1.0
   flutter_svg: ^0.17.4
   intl: ^0.16.1
+  firebase_auth: ^0.16.1
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
