--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   intl: ^0.16.1
   firebase_auth: ^0.16.1
   modal_progress_hud: ^0.1.3
+  cloud_firestore: ^0.13.6
 
 dev_dependencies:
   flutter_test:
