--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_auth: ^0.16.1
   modal_progress_hud: ^0.1.3
   cloud_firestore: ^0.13.6
+  firebase_helpers: ^0.1.0
+  table_calendar: ^2.2.3
 
 dev_dependencies:
   flutter_test:
