--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cloud_firestore: ^0.13.6
   firebase_helpers: ^0.1.0
   table_calendar: ^2.2.3
+  shared_preferences: ^0.5.7+3
 
 dev_dependencies:
   flutter_test:
