--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_helpers: ^0.1.0
   table_calendar: ^2.2.3
   shared_preferences: ^0.5.7+3
+  rflutter_alert: ^1.0.3
 
 dev_dependencies:
   flutter_test:
