--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   table_calendar: ^2.2.3
   shared_preferences: ^0.5.7+3
   rflutter_alert: ^1.0.3
+  url_launcher: ^5.4.11
 
 dev_dependencies:
   flutter_test:
