--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^0.5.7+3
   rflutter_alert: ^1.0.3
   url_launcher: ^5.4.11
+  responsive_widgets: ^2.0.1
+  auto_size_text: ^2.1.0
 
 dev_dependencies:
   flutter_test:
