--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^5.4.11
   responsive_widgets: ^2.0.1
   auto_size_text: ^2.1.0
+  strings: ^0.1.2
 
 dev_dependencies:
   flutter_test:
